--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,12 @@
   }
 }
 
+@layer components {
+  .max-size {
+    max-height: calc(100vh - 170px);
+  }
+}
+
 body {
   height: 100vh;
   width: 100vw;
