feat: search query optimization & quick tags

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,13 @@
     --secondary: #1e2939;
     --accent: #faf2ef;
   }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
+  .scrollbar-hide {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  }
 }
 
 @layer components {
